[package]
name = "multiedit-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = { version = "0.12.0", features = ["state"] }
axum = "0.7.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = {version = "0.5", features = ["cors"]}

